# mlir-lumina

./: .clang-format  .gitignore
mira/: CMakeLists.txt  main.cpp
mira/.cache/clangd/index/: DistributeParallelismInterfaces.cpp.5E6785BA9C19F9A6.idx  DistributeParallelismInterfaces.h.487516FD8BB00CA2.idx  LuminaAttrs.cpp.0C05192A29C1A8CC.idx  LuminaAttrs.h.A92071AA1419514A.idx  LuminaDialect.cpp.928896B5DA7DF38B.idx  LuminaDialect.h.1C1B19E048130018.idx  LuminaEnums.h.99839487A9D7EF52.idx  LuminaOps.cpp.51C2C4D753F82F48.idx  LuminaOps.h.822385B3A50D9487.idx  LuminaTypes.cpp.EDA92FB24EEE8945.idx  LuminaTypes.h.12171FD4A3E5A59B.idx  main.cpp.E59A4119B132E8CF.idx
mira/include/: CMakeLists.txt
mira/include/Dialect/Lumina/IR/: CMakeLists.txt  LuminaAttrs.h  LuminaAttrs.td  LuminaConstraints.td  LuminaDialect.h  LuminaDialect.td  LuminaEnums.h  LuminaEnums.td  LuminaOps.h  LuminaOps.td  LuminaTypes.h  LuminaTypes.td
mira/include/Dialect/Lumina/Transforms/: CMakeLists.txt  Passes.h  Passes.td
mira/include/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.h  DistributeParallelismInterfaces.td  FusionRegionInterfaces.h  FusionRegionInterfaces.td
mira/include/Utils/: File.h
mira/src/: CMakeLists.txt
mira/src/Dialect/: CMakeLists.txt
mira/src/Dialect/Lumina/IR/: CMakeLists.txt  LuminaAttrs.cpp  LuminaDialect.cpp  LuminaOps.cpp  LuminaTypes.cpp
mira/src/Dialect/Lumina/Transforms/: ApplyDistributeTransform.cpp  CMakeLists.txt  DeviceRegionFusion.cpp  MarkDistributeParallelParameters.cpp
mira/src/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.cpp  FusionRegionInterfaces.cpp
mira/src/Tools/: CMakeLists.txt
mira/src/Tools/Lumina-opt/: CMakeLists.txt  Lumina-opt.cpp
mira/src/Utils/: File.cpp
mira/test/: softmax.mlir
scripts/: build_llvm.sh  build_mira.sh
